base of pie chart done, no color customization/labels or data organization yet

--- a/index.html
+++ b/index.html
@@ -4,17 +4,34 @@
     <meta charset="UTF-8">
     <title>D3.js Samples</title>
     <link rel="stylesheet" href="./Assets/stylesheet.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
+    <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="//d3js.org/d3.v3.min.js"></script>
 </head>
 <body>
-    <div id="PieChart"></div>
+
+    <header>
+        <h1>D3.js Samples</h1>
+    </header>
+
+    <ul>
+        <li><a href="./piechart.html"><button>Pie Chart</button></a></li>
+        <li><button>Icicle</button></li>
+        <li><button>Bar Chart</button></li>
+        <li><button>Collapsible Tree</button></li>
+    </ul>
+
+    <!-- <div class="piecontainer">
+        <div id="pieChart"></div>
+    </div>
     <div id="Icicle"></div>
-    <div id="Tree"></div>
+    <div id="Tree"></div> -->
 
 
     <!-- Scripts for D3 Code -->
-    <script src="./Assets/piechart.js"></script>
+    <!-- <script src="./Assets/piechart.js"></script>
     <script src="./Assets/icicle.js"></script>
-    <script src="./Assets/tree.js"></script>
+    <script src="./Assets/tree.js"></script> -->
 </body>
 </html>
