adding in additional html/css/js files for other data graphs

--- a/barchart.html
+++ b/barchart.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="./Assets//CSS/stylesheet.css"/>
-        <link rel="stylesheet" href="./Assets/CSS/piestyle.css"/>
+        <link rel="stylesheet" href="./Assets/CSS/stylesheet.css"/>
+        <link rel="stylesheet" href="./Assets/CSS/barstyle.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
     <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -11,13 +11,13 @@
     <body>
         <a href="./index.html"><button id="home">Home</button></a>
         <header>
-            <h2>Pie Chart</h2>
+            <h2>Bar Chart</h2>
         </header>
-        <p>A pie chart example displaying my reading stats from 2020</p>
+        <p>~ Description Here ~</p>
 
         <div class="piecontainer">
             <div id="pieChart"></div>
         </div>
-        <script src="./Assets/piechart.js"></script>
+        <script src="./Assets/barchart.js"></script>
     </body>
 </html>
