--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>D3.js Samples</title>
-    <link rel="stylesheet" href="./Assets/stylesheet.css"/>
+    <link rel="stylesheet" href="./Assets/CSS/stylesheet.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
     <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -17,21 +17,9 @@
 
     <ul>
         <li><a href="./piechart.html"><button>Pie Chart</button></a></li>
-        <li><button>Icicle</button></li>
-        <li><button>Bar Chart</button></li>
-        <li><button>Collapsible Tree</button></li>
+        <li><a href="./icicle.html"><button>Icicle</button></a></li>
+        <li><a href="./barchart.html"><button>Bar Chart</button></a></li>
+        <li><a href="./collapsibletree.html"><button>Collapsible Tree</button></a></li>
     </ul>
-
-    <!-- <div class="piecontainer">
-        <div id="pieChart"></div>
-    </div>
-    <div id="Icicle"></div>
-    <div id="Tree"></div> -->
-
-
-    <!-- Scripts for D3 Code -->
-    <!-- <script src="./Assets/piechart.js"></script>
-    <script src="./Assets/icicle.js"></script>
-    <script src="./Assets/tree.js"></script> -->
 </body>
 </html>
