json data started for collapsible tree

--- a/collapsibletree.html
+++ b/collapsibletree.html
@@ -15,8 +15,8 @@
         </header>
         <p>A Collapsible Tree example displaying a book genre with authors and their titles, both stand alones and series</p>
 
-        <div class="piecontainer">
-            <div id="pieChart"></div>
+        <div class="treecontainer">
+            <div id="tree"></div>
         </div>
         <script src="./Assets/tree.js"></script>
     </body>
