more work on collapsible tree, still not visualizing on webpage

--- a/collapsibletree.html
+++ b/collapsibletree.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Tree Graph</title>
         <link rel="stylesheet" href="./Assets/CSS/stylesheet.css"/>
         <link rel="stylesheet" href="./Assets/CSS/treestyle.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
-    <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
+        <link href="https://fonts.googleapis.com/css2?family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <script src="https://d3js.org/d3.v7.min.js"></script>
     </head>
     <body>
         <a href="./index.html"><button id="home">Home</button></a>
@@ -15,8 +16,8 @@
         </header>
         <p>A Collapsible Tree example displaying a book genre with authors and their titles, both stand alones and series</p>
 
-        <div class="treecontainer">
-            <div id="tree"></div>
+        <div class="main-container">
+            <div id="collapsibleTree"></div>
         </div>
         <script src="./Assets/tree.js"></script>
     </body>
