--- a/piechart.html
+++ b/piechart.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Pie Chart</title>
         <link rel="stylesheet" href="./Assets//CSS/stylesheet.css"/>
         <link rel="stylesheet" href="./Assets/CSS/piestyle.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
