changed some tree styling

--- a/collapsibletree.html
+++ b/collapsibletree.html
@@ -16,7 +16,7 @@
         </header>
         <p>A Collapsible Tree example displaying a book genre with authors and their titles, both stand alones and series</p>
 
-        <div class="main-container">
+        <div class="main-container container">
             <div id="collapsibleTree"></div>
         </div>
         <script src="./Assets/tree.js"></script>
