got group bar chart starting to visualize

--- a/barchart.html
+++ b/barchart.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Grouped Bar Chart</title>
         <link rel="stylesheet" href="./Assets/CSS/stylesheet.css"/>
         <link rel="stylesheet" href="./Assets/CSS/barstyle.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,12 +12,12 @@
     <body>
         <a href="./index.html"><button id="home">Home</button></a>
         <header>
-            <h2>Bar Chart</h2>
+            <h2>Grouped Bar Chart</h2>
         </header>
-        <p>~ Description Here ~</p>
+        <p> A Grouped Bar Chart displaying my reading stats per month comparing the years 2020-2023</p>
 
-        <div class="piecontainer">
-            <div id="pieChart"></div>
+        <div class="barGraphContainer">
+            <div id="barGraph"></div>
         </div>
         <script src="./Assets/barchart.js"></script>
     </body>
