--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ul>
         <li><a href="./piechart.html"><button>Pie Chart</button></a></li>
         <li><a href="./icicle.html"><button>Icicle</button></a></li>
-        <li><a href="./barchart.html"><button>Bar Chart</button></a></li>
+        <li><a href="./barchart.html"><button>Grouped Bar Chart</button></a></li>
         <li><a href="./collapsibletree.html"><button>Collapsible Tree</button></a></li>
     </ul>
 </body>
