removed icicle chart for now to keep working

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 
     <ul>
         <li><a href="./piechart.html"><button>Pie Chart</button></a></li>
-        <li><a href="./icicle.html"><button>Icicle</button></a></li>
+        <!-- <li><a href="./icicle.html"><button>Icicle</button></a></li> -->
         <li><a href="./barchart.html"><button>Grouped Bar Chart</button></a></li>
         <li><a href="./collapsibletree.html"><button>Collapsible Tree</button></a></li>
     </ul>
+
+    <p id="disclaimer"> ~ ~ more to come ~ ~</p>
 </body>
 </html>
